[package]
name = "rumple"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
rand = { version = "0.8.5", default-features = false }


[features]
default = ["std", "num-traits/std"]
std = ["num-traits/std"]

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[[bench]]
name = "geo_car"
harness = false

[profile.bench]
lto = true
debug = true
