[package]
name = "rumple"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
rand = { version = "0.8.5", default-features = false }


[features]
default = ["std", "num-traits/std"]
std = ["num-traits/std"]
simd = []

[dev-dependencies]
brunch = { version = "0.6.1", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[profile.bench]
debug = true
codegen-units = 32

[profile.test]
codegen-units = 32

[[bench]]
name = "geo_car"
harness = false

[[bench]]
name = "geo_maze3d"
harness = false

[[example]]
name = "ball2d"
test = true

[[example]]
name = "simple_rrt"
test = true
