[package]
name = "carom"
version = "0.1.0"
edition = "2021"

[dependencies]
brunch = { version = "0.6.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rumple = { path = "../rumple", features = ["kiddo"] }

[features]
std = []

[[bench]]
name = "geo_car"
harness = false

[[bench]]
name = "geo_maze3d"
harness = false

[[example]]
name = "ball2d"
test = true
