[package]
name = "rumple"
version = "0.1.0"
edition = "2021"

[dependencies]
kiddo = { version = "4.2.1", optional = true, default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
rand = { version = "0.8.5", default-features = false }


[features]
default = ["std", "num-traits/std"]
std = ["num-traits/std"]
kiddo = ["dep:kiddo"]

[dev-dependencies]
brunch = { version = "0.6.1", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[profile.test]
codegen-units = 32

[[example]]
name = "simple_rrt"
test = true
